# unsupervised-emotion-detection

./: .gitignore  classify.py  cluster.py  datasets.py  exp_lstm_band.py  main.py  main_band.py  main_clisa.py  main_ecg.py  networks.py  plot.py  post_process_exp.py  pyproject.toml  settings.py
Data/Dreamer/: test.py
