[project]
name = "ued"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "joblib>=1.5.2",
    "loguru>=0.7.3",
    "mne>=1.10.1",
    "numpy>=2.3.3",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "umap-learn>=0.5.9.post2",
]
